20-12-2000: DarkIce 0.3 released

    o added POSIX real-time scheduling


18-11-2000: DarkIce 0.2 released

    o code cleanup
    o first real tests made
    o added verbosity command line option


13-11-2000: DarkIce 0.1 released
