@@ -1,4 +1,8 @@
 DarkIce is being written by:
 
-    Akos Maroy, darkeye@users.sourceforge.net
+    Akos Maroy, <darkeye@users.sourceforge.net>
+
+with contributions by:
+
+    Jim Crilly, <JCrilly@MSA.com>
 
