@@ -5,5 +5,4 @@ o make a master config file, and a small one
 o add support for shared object lame
 o add support for VBR encoding
 o reconnect to server if connection is dropped
-o add support for unlimited time encoding
 o add support for multiple servers for one stream
