@@ -1,6 +1,6 @@
 dnl Process this file with autoconf to produce a configure script.
 AC_INIT(src/DarkIce.cpp)
-AM_INIT_AUTOMAKE(darkice, 0.3)
+AM_INIT_AUTOMAKE(darkice, 0.3.1)
 
 AM_CONFIG_HEADER(configure.h)
 
